src/test/resources/cocos/valid/imports/visibilityOfSymbols/Symbol Definition.sysml
package 'Symbol Definition' {
  private block VehiclePrivate;
  block BusPublic;
}