src/test/resources/cocos/invalid/imports/elementNameAlreadyExists1/Symbol Definition.sysml
package 'Symbol Definition' {
  block Vehicle;
}